fixed image overflow in modal

--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -273,6 +273,10 @@ span.edit-link {
   }
 }
 
+#outerImageContainer {
+	max-width: 100%;
+}
+
 /*== CAPTION LAYOUT==*/
 
 .wp-caption {
